test/tests/bad/undef-type_2.carth
;; UndefType

(defun foo [x] :of (Fun [Int] Foo) (foo x))
